  - Fixed Dutch country leader switching when House of Orange is in power and King/Queen is abdicating
  - Fixed Dutch events and decisions giving building to random states instead of random owned states
  - Fixed Dutch focus "Global Vision" not giving ruling party popularity
  - Fixed Dutch event for Peru ending up in Iran


 Content:
  - The idea "Fight With Communism" will now cancel if you become Emerging Outlook as either Lithuania, Latvia, Estonia, Finland or Poland
  - Added the idea "Fight With Communism" to Lithuania, Latvia, Estonia and Finland
  - Added a decision to allow anyone to join BRICS as long as India has formed BRICS
  - Added Unit and Ship name lists for the Netherlands
  - Changed starting focus for Dutch Fascist, needing them to be in power instead of starting a civil war

 Database:
  - Added a new trait "Former Interior Minister" to Abdiqasim Salad Hassan for Somalia
  - Changed the starting national leader of Somalia to Ali Mahdi Muhammad
  - Added the traits "Career Politican" and "Writer" to the Indian leader "Atal Bihari Vajpayee"

 Game Rules:
  - Added a new game rule to disable the Muslim Brotherhood Civil Wars if you do not want them to happen

 Graphics:
  - Fixed the Algerian character "Fatima Zohra Ardjoune" having the improper small portrait
  - Added a small generic library of transport helicopters for the new unified equipment designer for each tier. More in-depth icon library will come in the future along with models
  - Fixed Missing Personal Union Autonomy State GFX
  - Fixed Dutch Missing Utility Research GFX

 Localization:
  - Added remaining sub unit modifier localization
  - Fixed missing localisation for Dutch decisions and national spirits
  - Fixed Historical Ship Name list missing loc

 User Interface:
  - Fixed the special project window for different projects having bad overlap with longer descriptions