@@ -9448,7 +9448,6 @@ PER_new_majlis = {
 			always = no
 		}
 
-		highlight_color_while_active = 1
 		highlight_states = {
 			highlight_state_targets = {
 				state = 400
