@@ -140,7 +140,9 @@ HOL_fourth_reich_category = {
 	}
 	visible = {
 		tag = HOL
-		has_completed_focus = HOL_fourth_reich
-		has_completed_focus = HOL_claim_german_leadership
+		OR = {
+			has_completed_focus = HOL_fourth_reich
+			has_completed_focus = HOL_claim_german_leadership
+		}
 	}
 }
