@@ -1887,7 +1887,8 @@ HOL_VOC_category = {
 		available = {
 			RAJ = {
 				has_civil_war = yes
-				HOL = { influence_higher_60 = yes }
+				war_with_us = no
+				influence_higher_60 = yes
 			}
 		}
 
@@ -2512,7 +2513,7 @@ HOL_VOC_category = {
 		targets = { RAJ }
 
 		available = {
-			RAJ = { HOL = { influence_higher_90 = yes } }
+			RAJ = { influence_higher_90 = yes }
 			NOT = {
 				HOL = {
 					owns_state = 436
@@ -2559,7 +2560,7 @@ HOL_VOC_category = {
 		targets = { RAJ }
 
 		available = {
-			RAJ = { HOL = { influence_higher_90 = yes } }
+			RAJ = { influence_higher_90 = yes }
 			NOT = {
 				HOL = {
 					owns_state = 452
@@ -2607,7 +2608,7 @@ HOL_VOC_category = {
 		targets = { RAJ }
 
 		available = {
-			RAJ = { HOL = { influence_higher_90 = yes } }
+			RAJ = { influence_higher_90 = yes }
 			NOT = {
 				HOL = {
 					owns_state = 465
@@ -2654,7 +2655,7 @@ HOL_VOC_category = {
 		targets = { RAJ }
 
 		available = {
-			RAJ = { HOL = { influence_higher_90 = yes } }
+			RAJ = { influence_higher_90 = yes }
 			NOT = {
 				HOL = {
 					owns_state = 462
@@ -2754,9 +2755,9 @@ HOL_VOC_category = {
 		targets = { USA }
 
 		available = {
-			TAI = { HOL = { influence_higher_60 = yes } }
+			TAI = { influence_higher_60 = yes }
 			USA = {
-				HOL = { is_top5_influencer = yes }
+				is_top5_influencer = yes
 				has_guaranteed = TAI
 			}
 			HOL = {
