@@ -17745,7 +17745,7 @@ focus_tree = {
 			SAF = {
 				exists = yes
 				war_with_us = no
-				HOL = { influence_higher_40 = yes }
+				influence_higher_40 = yes
 				nationalist > 0.15
 			}
 		}
@@ -17786,7 +17786,7 @@ focus_tree = {
 			SAF = {
 				exists = yes
 				war_with_us = no
-				HOL = { influence_higher_40 = yes }
+				influence_higher_40 = yes
 				nationalist > 0.15
 			}
 		}
@@ -21301,11 +21301,11 @@ focus_tree = {
 			BRA = { exists = yes }
 			strength_ratio = {
 				tag = BRA
-				ratio = 1
+				ratio > 1
 			}
 			naval_strength_ratio = {
 				tag = BRA
-				ratio = 1
+				ratio > 1
 			}
 		}
 		bypass = {
@@ -21933,11 +21933,11 @@ focus_tree = {
 			USA = { exists = yes }
 			strength_ratio = {
 				tag = USA
-				ratio = 1
+				ratio > 1
 			}
 			naval_strength_ratio = {
 				tag = USA
-				ratio = 1.2
+				ratio > 1.2
 			}
 		}
 
@@ -22302,7 +22302,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			RAJ = {
 				exists = yes
-				HOL = { influence_higher_15 = yes }
+				war_with_us = no
+				influence_higher_15 = yes
 			}
 		}
 		bypass = { RAJ = { exists = no } }
@@ -22343,7 +22344,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			RAJ = {
 				exists = yes
-				HOL = { influence_higher_30 = yes }
+				war_with_us = no
+				influence_higher_30 = yes
 			}
 		}
 		bypass = { RAJ = { exists = no } }
@@ -22387,7 +22389,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			RAJ = {
 				exists = yes
-				HOL = { influence_higher_50 = yes }
+				war_with_us = no
+				influence_higher_50 = yes
 			}
 		}
 		bypass = { RAJ = { exists = no } }
@@ -22435,7 +22438,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			TAI = {
 				exists = yes
-				HOL = { influence_higher_15 = yes }
+				war_with_us = no
+				influence_higher_15 = yes
 			}
 		}
 
@@ -22473,7 +22477,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			TAI = {
 				exists = yes
-				HOL = { influence_higher_25 = yes }
+				war_with_us = no
+				influence_higher_25 = yes
 			}
 		}
 		bypass = { TAI = { exists = no } }
@@ -22512,7 +22517,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			TAI = {
 				exists = yes
-				HOL = { influence_higher_60 = yes }
+				war_with_us = no
+				influence_higher_60 = yes
 			}
 		}
 		bypass = { TAI = { exists = no } }
@@ -22553,7 +22559,7 @@ focus_tree = {
 					OR = {
 						strength_ratio = {
 							tag = USA
-							ratio = 1
+							ratio > 1
 						}
 						strength_ratio = {
 							tag = TAI
@@ -22564,7 +22570,8 @@ focus_tree = {
 			}
 			TAI = {
 				exists = yes
-				HOL = { influence_higher_70 = yes }
+				war_with_us = no
+				influence_higher_70 = yes
 			}
 		}
 		bypass = { TAI = { exists = no } }
@@ -22609,7 +22616,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SRI = {
 				exists = yes
-				HOL = { influence_higher_15 = yes }
+				war_with_us = no
+				influence_higher_15 = yes
 			}
 		}
 		bypass = { SRI = { exists = no } }
@@ -22648,7 +22656,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SRI = {
 				exists = yes
-				HOL = { influence_higher_40 = yes }
+				war_with_us = no
+				influence_higher_40 = yes
 			}
 		}
 		bypass = { SRI = { exists = no } }
@@ -22683,7 +22692,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SRI = {
 				exists = yes
-				HOL = { influence_higher_50 = yes }
+				war_with_us = no
+				influence_higher_50 = yes
 			}
 		}
 		bypass = { SRI = { exists = no } }
@@ -22736,7 +22746,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SRI = {
 				exists = yes
-				HOL = { influence_higher_70 = yes }
+				war_with_us = no
+				influence_higher_70 = yes
 			}
 		}
 		bypass = { SRI = { exists = no } }
@@ -22786,7 +22797,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SAF = {
 				exists = yes
-				HOL = { influence_higher_25 = yes }
+				war_with_us = no
+				influence_higher_25 = yes
 			}
 		}
 		bypass = { SAF = { exists = no } }
@@ -22859,6 +22871,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			country_exists = SAF
 			SAF = {
+				exists = yes
+				war_with_us = no
 				influence_higher_40 = yes
 			}
 		}
@@ -22897,7 +22911,11 @@ focus_tree = {
 
 		available = {
 			nationalist_monarchists_are_in_power = yes
-			SAF = { HOL = { influence_higher_40 = yes } }
+			SAF = {
+				exists = yes
+				war_with_us = no
+				influence_higher_40 = yes
+			}
 		}
 		bypass = {
 			SAF = { exists = no }
@@ -22936,7 +22954,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SAF = {
 				exists = yes
-				HOL = { influence_higher_60 = yes }
+				war_with_us = no
+				influence_higher_60 = yes
 			}
 		}
 		bypass = {
@@ -22973,7 +22992,8 @@ focus_tree = {
 			nationalist_monarchists_are_in_power = yes
 			SAF = {
 				exists = yes
-				HOL = { influence_higher_70 = yes }
+				war_with_us = no
+				influence_higher_70 = yes
 			}
 		}
 		bypass = {
@@ -26107,12 +26127,12 @@ focus_tree = {
 					GER = {
 						is_in_faction_with = HOL
 						has_idea = HOL_germanic_union_member2
-						HOL = { is_top3_influencer = yes }
+						influence_higher_60 = yes
 					}
 					AUS = {
 						is_in_faction_with = HOL
 						has_idea = HOL_germanic_union_member2
-						HOL = { is_top3_influencer = yes }
+						influence_higher_60 = yes
 					}
 				}
 				is_germany_anschluss_state_owned = yes
@@ -26122,18 +26142,18 @@ focus_tree = {
 		completion_reward = {
 			log = "[GetDateText]: [Root.GetName]: Focus HOL_fourth_reich"
 			if = {
-				limit = { has_completed_focus = HOL_german_brotherhood_of_nations }
-				AUS = { country_event = HOL_NVU.22 }
+				limit = {
+					has_completed_focus = HOL_german_brotherhood_of_nations
+					NOT = { has_country_flag = HOL_germany_rejected_brotherhood }
+				}
+				set_cosmetic_tag = HOL_fourth_reich
+				AUS = { country_event = HOL_NVU.27 }
 				GER = { country_event = HOL_NVU.22 }
 			}
 			else = {
 				set_cosmetic_tag = HOL_fourth_reich
 				unlock_decision_category_tooltip = HOL_fourth_reich_category
 			}
-			newline = yes
-			set_temp_variable = { treasury_change = gdp_per_capita }
-			multiply_temp_variable = { treasury_change = -0.10 }
-			modify_treasury_effect = yes
 		}
 
 		ai_will_do = {
