@@ -8523,7 +8523,7 @@ country_event = {
 	id = HOL_politics.74
 	title = HOL_politics.74.t
 	desc = HOL_politics.74.d
-	picture = GFX_focus_generic_military_exercise
+	#picture = x
 
 	is_triggered_only = yes
 
@@ -11904,7 +11904,20 @@ country_event = {
 		HOL = { country_event = { id = HOL_NVU.12 days = 1 } }
 
 		ai_chance = {
-			base = 55
+			base = 25
+			modifier = {
+				GER = { nationalist_fascist_are_in_power = yes }
+				add = 25
+			}
+			modifier = {
+				GER = {
+					strength_ratio = {
+						tag = HOL
+						ratio < 1.5
+					}
+				}
+				add = 15
+			}
 		}
 	}
 
@@ -11917,6 +11930,19 @@ country_event = {
 		}
 		ai_chance = {
 			base = 25
+			modifier = {
+				GER = { nationalist_fascist_are_not_in_power = yes }
+				add = 50
+			}
+			modifier = {
+				GER = {
+					strength_ratio = {
+						tag = HOL
+						ratio > 2
+					}
+				}
+				add = 15
+			}
 		}
 	}
 }
@@ -12129,12 +12155,54 @@ country_event = {
 		name = HOL_NVU.22.a # Accept unification
 		log = "[GetDateText]: [Root.GetName]: HOL_NVU.22.a executed"
 		HOL = { country_event = { id = HOL_NVU.23 days = 1 } }
+
+		ai_chance = {
+			base = 15
+			modifier = {
+				GER = {
+					OR = {
+						has_idea = HOL_germanic_union_member1
+						has_idea = HOL_germanic_union_member2
+					}
+
+				}
+				add = 50
+			}
+		}
+
 	}
 
 	option = {
 		name = HOL_NVU.22.b # Refuse
 		log = "[GetDateText]: [Root.GetName]: HOL_NVU.22.b executed"
 		HOL = { country_event = { id = HOL_NVU.24 days = 1 } }
+		if = {
+			limit = { has_idea = HOL_germanic_union_member1 }
+			remove_ideas = HOL_germanic_union_member1
+		}
+		if = {
+			limit = { has_idea = HOL_germanic_union_member2 }
+			remove_ideas = HOL_germanic_union_member2
+		}
+		if = {
+			limit = { is_in_faction_with = HOL }
+			remove_from_faction = GER
+		}
+
+		ai_chance = {
+			base = 25
+			modifier = {
+				strength_ratio = {
+					tag = HOL
+					ratio > 2
+				}
+				add = 35
+			}
+			modifier = {
+				GER = { nationalist_monarchists_are_in_power = yes }
+				add = 25
+			}
+		}
 	}
 }
 country_event = {
@@ -12149,7 +12217,7 @@ country_event = {
 		name = HOL_NVU.23.a
 		log = "[GetDateText]: [Root.GetName]: HOL_NVU.23.a executed"
 		annex_country = {
-			target = PREV
+			target = GER
 			transfer_troops = yes
 		}
 	}
@@ -12167,7 +12235,7 @@ country_event = {
 		log = "[GetDateText]: [Root.GetName]: HOL_NVU.24.a executed"
 		create_wargoal = {
 			type = annex_everything
-			target = PREV
+			target = GER
 		}
 	}
 }
@@ -12256,6 +12324,105 @@ country_event = {
 					level = 1
 				}
 			}
+		}
+	}
+}
+country_event = {
+	id = HOL_NVU.27
+	title = HOL_NVU.27.t
+	desc = HOL_NVU.27.d
+	#picture = x # TODO: Replace me with an image
+
+	is_triggered_only = yes
+
+	option = {
+		name = HOL_NVU.27.a # Accept unification
+		log = "[GetDateText]: [Root.GetName]: HOL_NVU.27.a executed"
+		HOL = { country_event = { id = HOL_NVU.28 days = 1 } }
+
+		ai_chance = {
+			base = 15
+			modifier = {
+				AUS = {
+					OR = {
+						has_idea = HOL_germanic_union_member1
+						has_idea = HOL_germanic_union_member2
+					}
+
+				}
+				add = 50
+			}
+		}
+	}
+
+	option = {
+		name = HOL_NVU.27.b # Refuse
+		log = "[GetDateText]: [Root.GetName]: HOL_NVU.27.b executed"
+		HOL = { country_event = { id = HOL_NVU.29 days = 1 } }
+		if = {
+			limit = { has_idea = HOL_germanic_union_member1 }
+			remove_ideas = HOL_germanic_union_member1
+		}
+		if = {
+			limit = { has_idea = HOL_germanic_union_member2 }
+			remove_ideas = HOL_germanic_union_member2
+		}
+		if = {
+			limit = { is_in_faction_with = HOL }
+			remove_from_faction = AUS
+		}
+
+		ai_chance = {
+			base = 25
+			modifier = {
+				strength_ratio = {
+					tag = HOL
+					ratio > 2
+				}
+				add = 35
+			}
+			modifier = {
+				AUS = { nationalist_monarchists_are_in_power = yes }
+				add = 25
+			}
+			modifier = {
+				AUS = { nationalist_fascist_are_not_in_power = yes }
+				add = 40
+			}
+		}
+	}
+}
+country_event = {
+	id = HOL_NVU.28
+	title = HOL_NVU.28.t
+	desc = HOL_NVU.28.d
+	#picture = x # TODO: Replace me with an image
+
+	is_triggered_only = yes
+
+	option = {
+		name = HOL_NVU.28.a
+		log = "[GetDateText]: [Root.GetName]: HOL_NVU.28.a executed"
+		annex_country = {
+			target = AUS
+			transfer_troops = yes
+		}
+	}
+}
+country_event = {
+	id = HOL_NVU.29
+	title = HOL_NVU.29.t
+	desc = HOL_NVU.29.d
+	#picture = x # TODO: Replace me with an image
+
+	is_triggered_only = yes
+
+	option = {
+		name = HOL_NVU.29.a
+		log = "[GetDateText]: [Root.GetName]: HOL_NVU.29.a executed"
+		create_wargoal = {
+			type = annex_everything
+			target = AUS
 		}
 	}
 }
