@@ -3161,6 +3161,19 @@
  HOL_NVU.25.t: "Dutch Investment in Austrian Resources"
  HOL_NVU.25.d: "In a new phase of economic integration, the Dutch government has proposed a large-scale investment in Austria's resource extraction and refinement sectors. The move is set to modernize critical infrastructure and enhance raw material output across the region."
  HOL_NVU.25.a: "This will strengthen our industrial base."
+ HOL_NVU.26.t: "Dutch Investment in Cross-German Rail Infrastructure"
+ HOL_NVU.26.d: "The Dutch government has announced a major investment program aimed at upgrading and expanding railway infrastructure across the Germanic regions. Officials state the goal is to improve mobility, economic integration, and cultural unity among the broader German peoples. The move aligns with the Netherlands' continental vision and growing infrastructural ambitions in Central Europe."
+ HOL_NVU.26.a: "An iron road for a shared destiny."
+ HOL_NVU.27.t: "Dutch Proposal for Unification"
+ HOL_NVU.27.d: "The Netherlands has proposed a full unification of the Germanic peoples under one state. We must now decide whether to embrace unity or stand apart."
+ HOL_NVU.27.a: "We accept the union"
+ HOL_NVU.27.b: "We reject their offer"
+ HOL_NVU.28.t: "Unification Accepted"
+ HOL_NVU.28.d: "Our offer of unification has been accepted. A new Germanic empire is born under Dutch leadership."
+ HOL_NVU.28.a: "The dream fulfilled"
+ HOL_NVU.29.t: "Unification Rejected"
+ HOL_NVU.29.d: "Our unification proposal has been refused. We must now decide whether the Brotherhood ends here, or continues by force."
+ HOL_NVU.29.a: "Then we shall take it"
  HOL_common_event.1.t: "Queen Beatrix Announces Her Abdication"
  HOL_common_event.1.d: "In a nationally televised address, Queen Beatrix has officially announced her decision to abdicate the throne in favor of her son, Prince Willem-Alexander. After more than three decades of service, she has stated it is time for a new generation to lead. The transfer of power is scheduled to take place on April 30th in Amsterdam’s Royal Palace."
  HOL_common_event.1.a: "A royal transition begins."
