@@ -19,6 +19,9 @@ v1.12.1b
   - Fixed Dutch events and decisions giving building to random states instead of random owned states
   - Fixed Dutch focus "Global Vision" not giving ruling party popularity
   - Fixed Dutch event for Peru ending up in Iran
+  - Fixed Dutch annexing themself when Germany or Austria accepts unification
+  - Fixed Influence triggers for VOC focusses
+  - Fixed Dutch "Proclaim Fourth Reich" not being available when conditions are met
 
 
  Content:
